--- a/04 Numpy.ipynb
+++ b/04 Numpy.ipynb
@@ -341,7 +341,7 @@
    "source": [
     "### Class exercise: table\n",
     "![](images/numpy_slice_ex.png)\n",
-    "- on the above image find the 3 different slicings using only the array slicing notation"
+    "- on the above image find the 5 different slicings using only the array slicing notation"
    ]
   },
   {
@@ -837,7 +837,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Incomplete Indexing\n",
+    "## Other types of Indexing\n",
     "\n",
     "As you saw above, you can omit index numbers, which then default to index 0 or index for the last element of the array."
    ]
@@ -1315,48 +1315,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find largest nationality group\n",
+    "From the Copenhagen citizen data we will find out 2 things about year 2015:\n",
+    "1. What nationality group (beside danish) is the largest\n",
+    "2. How many people are in that group\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "all the country keys:\n",
-      " [5001 5102 5103 5104 5105 5106 5107 5108 5110 5115 5120 5122 5126 5128\n",
-      " 5129 5130 5134 5140 5142 5150 5151 5152 5153 5154 5156 5158 5159 5160\n",
-      " 5162 5164 5170 5172 5174 5180 5182 5202 5204 5207 5213 5214 5215 5216\n",
-      " 5222 5228 5231 5232 5233 5234 5235 5236 5238 5240 5242 5243 5244 5245\n",
-      " 5246 5247 5255 5258 5259 5262 5266 5268 5269 5272 5275 5277 5278 5279\n",
-      " 5281 5282 5283 5284 5285 5287 5288 5289 5292 5293 5294 5295 5296 5297\n",
-      " 5298 5299 5302 5303 5304 5305 5306 5308 5311 5314 5316 5318 5322 5324\n",
-      " 5326 5328 5338 5339 5342 5344 5345 5347 5348 5352 5354 5356 5358 5364\n",
-      " 5366 5372 5374 5376 5390 5392 5402 5403 5404 5406 5408 5410 5412 5414\n",
-      " 5416 5418 5422 5424 5432 5434 5436 5438 5442 5444 5446 5448 5452 5454\n",
-      " 5456 5457 5458 5459 5462 5464 5466 5472 5474 5478 5482 5484 5486 5487\n",
-      " 5488 5492 5496 5499 5502 5505 5508 5514 5522 5525 5526 5607 5609 5611\n",
-      " 5625 5700 5704 5706 5708 5710 5712 5714 5716 5718 5720 5722 5724 5750\n",
-      " 5752 5754 5756 5757 5758 5759 5761 5776 5778 5902 5999]\n",
-      "all the number of people in each citizen group:\n",
-      " [   4    9  632  899    2 1968    1   11 4093   15 4745   68  273 1413\n",
-      "   23 2156  744  977  565 3069   19 1487   22 3906  849 1891    1  387\n",
-      "   51 1999 4523 3792  796 4021  377  132    7    4   48  273    3   50\n",
-      "  175  404   16   40    3  151    5   11   12   24    1    9 1499   15\n",
-      "  364    5   68  129    3   93  125  199  196  321    0  122   25   25\n",
-      "    5   99    2    2    2   29   38 2087    3   32    8   14   31    5\n",
-      "    2    2  161    3   29    3  560    3    0  605  223  146   23  152\n",
-      "   16   54   29    4    4    0    2    2   12   20  253   27   15    3\n",
-      "  137    4   21   17 2534   84   11    1  658    0    8  787    2   47\n",
-      "   27   86   24   60 2168  137 2544 1093  192  383  460 2552    4    6\n",
-      "  343    1  122    8    7 1692   13 4502 1396    9  128  149  200    3\n",
-      "  278 1544    2    1  609    2    2  143    2   12    2  323  585 1348\n",
-      "    0  787  447   58   59   28   25   42   36    2    7    2   34  285\n",
-      "  102  688 1518  195   57  121  121  217  321    0    1]\n",
-      "index (or indices if more) of the largest group:  10\n",
-      "c_k: 5120\n",
-      "country_name:  Sverige\n",
-      "4745 inhabitants come from Sverige\n"
+     "ename": "NameError",
+     "evalue": "name 'dd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b3d2a8635538>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# create a set of conuntry codes with people living in Copenhagen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc_keys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdd\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m# we are interested in non-danes only\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mc_keys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc_keys\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc_keys\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m5100\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'all the country keys:\\n'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dd' is not defined"
      ]
     }
    ],
@@ -1369,14 +1350,18 @@
     "# and again we only consider 2015\n",
     "mask_year_2015 = (dd[:,0] == 2015)\n",
     "\n",
+    "\n",
+    "# list comprehension to loop all country codes and sum all citizens by country_code for year 2015\n",
     "number_per_citizen_group = np.array([np.sum(dd[mask_year_2015 & (dd[:,3] == c_code)][:,4]) for c_code in c_keys])\n",
     "print('all the number of people in each citizen group:\\n',number_per_citizen_group)\n",
+    "# use np.argmax to find the index of the largest group\n",
     "idx_of_largest_group = np.argmax(number_per_citizen_group)\n",
     "print('index (or indices if more) of the largest group: ',idx_of_largest_group)\n",
     "county_code = c_keys[idx_of_largest_group] # using the index of the largest summed up group and finding the value of that index in another slice of the same dataset\n",
     "print('c_k:',county_code)\n",
     "country_name = country_codes[county_code] # this is a dictionary where key=country_code and value=country name\n",
     "print('country_name: ',country_name)\n",
+    "print('¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤RESULT¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤¤')\n",
     "print(f'{number_per_citizen_group.max()} inhabitants come from {country_name}')"
    ]
   },
@@ -1448,7 +1433,7 @@
    "source": [
     "### Computing a Histogram Concisely\n",
     "\n",
-    "As said, we are using NumPy to express our data queries more concisely. The first three lines of the following program compute the histogram of ages in 2015. That is, in three lines we can express the same as in the 13 lines of , see the function `get_population_stat` under *Bar Plots* in *14-Intro to Plotting*."
+    "As said, we are using NumPy to express our data queries more concisely. The first three lines of the following program compute the histogram of ages in 2015. That is, in three lines we can express the same as in the 13 lines of , see the function `get_population_stat` under *Bar Plots* in *Intro to Plotting*."
    ]
   },
   {
@@ -1784,6 +1769,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
