added pandas exercise

--- a/01-4 Data structures (Dictionaries).ipynb
+++ b/01-4 Data structures (Dictionaries).ipynb
@@ -908,6 +908,77 @@
     "dict_comp = {el:el**2 for el in list_2_dict}\n",
     "print(dict_comp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 ways to count up elements using dictionary\n",
+    "# first:\n",
+    "from collections import defaultdict\n",
+    "colors = ['red','green','red','blue','green','blue','grey','black','grey']\n",
+    "d = {}\n",
+    "for color in colors:\n",
+    "    if color not in d:\n",
+    "        d[color] = 0 \n",
+    "    d[color] =+ 1\n",
+    "# second:\n",
+    "for color in colors: \n",
+    "    d[color] = d.get(color,0) + 1 # get() method returns 0 if key does not exist in dictionary\n",
+    "# third\n",
+    "d = defaultdict(int) # int called with no value is default to zero\n",
+    "for color in colors:\n",
+    "    d[color] += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grouping with dictionaries 3 ways (group by number of letters in string)\n",
+    "# first\n",
+    "d = {}\n",
+    "for color in colors:\n",
+    "    key = len(color) \n",
+    "    if key not in d:\n",
+    "        d[key] = []\n",
+    "    d[key].append(color) \n",
+    "# second using setdefault()\n",
+    "for color in colors: \n",
+    "    key = len(color) \n",
+    "    d.setdefault(key,[]).append(color)\n",
+    "# third way using defaultdict\n",
+    "d = defaultdict(list)\n",
+    "for color in colors: \n",
+    "    key = len(color) \n",
+    "    d[key].append(color) # if key is not there the default will be an empty list.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bertha beach house\n",
+      "oliver work\n",
+      "fred home\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = {'fred':'home','oliver':'work','bertha':'beach house'}\n",
+    "while d:\n",
+    "    key,value = d.popitem()\n",
+    "    print(key,value)\n"
+   ]
   }
  ],
  "metadata": {
@@ -927,6 +998,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.4"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
