--- a/04 Numpy.ipynb
+++ b/04 Numpy.ipynb
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,6 +1240,34 @@
     "                 5761: 'Kosovo', 5776: 'Tjekkiet', 5778: 'Slovakiet', 5779: 'Cookøerne', \n",
     "                 5800: 'Land ukendt (2)', 5901: 'Færøerne uoplyst', 5902: 'Færøerne', \n",
     "                 5999: 'Land ukendt (1)'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "with open('befkbh_stat_code.json','w') as f:\n",
+    "    f.write(json.dumps(country_codes))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "befkbh_stat_code.json\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls befkbh_stat_code.json"
    ]
   },
   {
