changed a url in pandas slides

--- a/02-2 Working with Files.ipynb
+++ b/02-2 Working with Files.ipynb
@@ -6772,6 +6772,40 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## download and unzip\n",
+    "```python\n",
+    "import webget, zipfile\n",
+    "z = webget.download('https://databank.worldbank.org/reports.aspx?source=2&series=MS.MIL.XPND.CD#')\n",
+    "with zipfile.ZipFile(z,'r') as f:\n",
+    "    f.extractall('./worldbank_mil') \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'1f4a8bf7-b88a-4468-a637-f6824b9b247b_Series - Metadata.csv'\r\n",
+      " API_MS.MIL.XPND.CD_DS2_en_csv_v2_716872.csv\r\n",
+      " Metadata_Country_API_MS.MIL.XPND.CD_DS2_en_csv_v2_716872.csv\r\n",
+      " Metadata_Indicator_API_MS.MIL.XPND.CD_DS2_en_csv_v2_716872.csv\r\n",
+      " mil_2018_all.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls ./worldbank_mil/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
