correction to pandas

--- a/06-1 Iterators and Generators.ipynb
+++ b/06-1 Iterators and Generators.ipynb
@@ -27,12 +27,18 @@
    "source": [
     "## Iterators in Python\n",
     "\n",
-    "https://wiki.python.org/moin/Iterator"
+    "https://wiki.python.org/moin/Iterator  \n",
+    "\n",
+    "### Iterators implement 2 methods:\n",
+    "__iter__() and __next__()  \n",
+    "\n",
+    "Iterators minimize memory use sinse each element is lazy loaded.   \n",
+    "Generators are Iterators that can be easily written with a single function (rather than creating a class implementing the Iterator interface)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -55,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 1]"
+       "[1]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +135,7 @@
    ],
    "source": [
     "def firstn(n):\n",
-    "    \"\"\"Our first generator that lazy loads each requested element (as opposed to iterator, that builds the whole list in memory)\"\"\"\n",
+    "    \"\"\"Our first generator that lazy loads each requested element\"\"\"\n",
     "    num = 0\n",
     "    while num < n:\n",
     "        yield num\n",
@@ -151,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -265,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -276,6 +282,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'generator'>\n",
       "AAR         2015\n",
       "BYDEL          1\n",
       "ALDER          0\n",
@@ -309,8 +316,9 @@
    ],
    "source": [
     "# get a generator from the dataframe to iterate over DataFrame rows as (index, Series) pairs.\n",
-    "generator = df.iterrows()\n",
-    "for idx,row in generator:\n",
+    "g = df.iterrows()\n",
+    "print(type(g))\n",
+    "for idx,row in g:\n",
     "    if idx < 4:\n",
     "        print(row,'\\n')"
    ]
@@ -364,110 +372,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "[i for i in range(1000, 500, -5)]"
+    "def check_prime(number):\n",
+    "    for divisor in range(2, int(number ** 0.5) + 1):\n",
+    "        if number % divisor == 0:\n",
+    "            return False\n",
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "(i for i in range(1000, 500, -5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def gen_my_values():\n",
-    "    for i in range(1000, 900, -5):\n",
-    "        yield i"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000\n",
-      "995\n",
-      "990\n"
+      "size of the list in memorey:\t\t406504\n",
+      "size of the generator in memorey:\t128\n"
      ]
     }
    ],
    "source": [
-    "g = gen_my_values()\n",
-    "print(next(g))\n",
-    "print(next(g))\n",
-    "print(next(g))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "995\n",
-      "990\n",
-      "985\n",
-      "980\n",
-      "975\n",
-      "970\n",
-      "965\n",
-      "960\n",
-      "955\n",
-      "950\n",
-      "945\n",
-      "940\n",
-      "935\n",
-      "930\n",
-      "925\n",
-      "920\n",
-      "915\n",
-      "910\n",
-      "905\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in gen_my_values():\n",
-    "    print(i)"
+    "\n",
+    "# import getsizeof from sys module \n",
+    "from sys import getsizeof \n",
+    "  \n",
+    "list_comprehension = [i for i in range(100000) if check_prime(i)] \n",
+    "generator_expression = (i for i in range(100000) if check_prime(i))  \n",
+    "  \n",
+    "#gives size for list comprehension \n",
+    "x = getsizeof(list_comprehension)  \n",
+    "y = getsizeof(generator_expression)  \n",
+    "print('size of the list in memorey:\\t\\t{}'.format(x))  \n",
+    "print('size of the generator in memorey:\\t{}'.format(y))  \n"
    ]
   },
   {
@@ -498,7 +440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Put the following into a module and run it"
+    "#### Put the following into a module: read_print.py and run it"
    ]
   },
   {
@@ -633,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -644,13 +586,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "767 ns ± 6.96 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "13.5 µs ± 257 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
    "source": [
     "# line magic function\n",
-    "%timeit sum(range(0, 100)) "
+    "%timeit sum(range(0, 1000)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.2 µs ± 127 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum(list(range(0,1000)))"
    ]
   },
   {
@@ -676,21 +635,6 @@
     "\n",
     "sum(range(0, 100)) \n",
     "sum(range(0, 100)) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Exercise\n",
-    "\n",
-    "* Figure out the difference between using `range` and using `list(range)`\n",
-    "* Sum the numbers from `0` to `10 ** 6` ($[0;10^6]$) using `range` and `%timeit`\n",
-    "* Sum the numbers from `0` to `10 ** 6` ($[0;10^6]$) using `list(range)` and `%timeit`"
    ]
   },
   {
