--- a/06 Exercise.ipynb
+++ b/06 Exercise.ipynb
@@ -10,9 +10,9 @@
     "1. __init__(self, url_list)\n",
     "2. download(url,filename) raises NotFoundException when url returns 404\n",
     "3. multi_download(url_list) uses threads to download multiple urls as text and stores filenames as a property\n",
-    "4. urlist_generator(url_list) returns a generator to loop through the filenames\n",
-    "5. urlist_iterator(url_list) returns an iterator to loop through the urls in the list\n",
-    "6. load_files() returns generator to yield each of the downloaded files\n",
+    "5. __iter__() returns an iterator\n",
+    "6. __next__() returns each of the downloaded files\n",
+    "6. urlist_generator(url_list) returns a generator to loop through the filenames\n",
     "7. avg_vowels(text) - a rough estimate on readability returns average number of vowels in the words of the text\n",
     "8. hardest_read() returns the filename of the text with the highest vowel score (use all the cpu cores on the computer for this work.\n",
     "\n",
