multiple changes to 6,8,9 and 10

--- a/09-1 sets.ipynb
+++ b/09-1 sets.ipynb
@@ -83,21 +83,23 @@
    },
    "source": [
     "## Exercise on sets\n",
-    "**Are these numbers inside the sets as stated below?**\n",
-    "\n",
     "<table>\n",
     "<tr><td>\n",
-    "  <ul>\n",
+    "  \n",
+    "</td><td><img src=\"images/numbersystem.png\"/></td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "\n",
+    "**Which expressions are true:?**\n",
+    "<u>\n",
     "    <li>$4 \\in \\mathbb{R}$</li>\n",
     "    <li>$\\pi \\in \\mathbb{Q}$</li>\n",
     "    <li>$\\frac{2}{3} \\in \\mathbb{R}$</li>\n",
     "    <li>$\\sqrt 2 \\notin \\mathbb{Q}$</li>\n",
     "    <li>$-5 \\in \\mathbb{N}$</li>\n",
-    "      <li>$log(7) \\notin \\mathbb{Q}$</li>\n",
-    "    </ul>\n",
-    "</td><td><img src=\"images/numbersystem.png\"/></td>\n",
-    "</tr>\n",
-    "</table>"
+    "    <li>$log(7) \\notin \\mathbb{Q}$</li>\n",
+    "</u>"
    ]
   }
  ],
