--- a/09-2 graphs and pagerank.ipynb
+++ b/09-2 graphs and pagerank.ipynb
@@ -1192,7 +1192,7 @@
    "source": [
     "# PageRank Algorithm\n",
     "\n",
-    "**PageRank** was one of the two original ideas that set Google's search apart from other Web search engines when it was introduced in 1997.\n",
+    "**PageRank** was one of the original ideas that set Google's search apart from other Web search engines when it was introduced in 1997.\n",
     "\n",
     "PageRank was invented to solve the problem of term-frequency (TF) tyranny: if we are searching for `IBM`, how do we make sure that the *first* result is IBM's website, and not a random page that mentioned `IBM` more frequently?\n",
     "\n",
