--- a/10-0 Linear Algebra.ipynb
+++ b/10-0 Linear Algebra.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -188,7 +188,7 @@
        "(5,)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -249,20 +249,20 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 1],\n",
-       "       [ 5],\n",
-       "       [ 8],\n",
-       "       [-2],\n",
-       "       [ 6]])"
+       "array([[ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True],\n",
+       "       [ True]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "v.reshape(-1, 1)"
+    "v.reshape(-1, 1) == v.reshape(5,1)"
    ]
   },
   {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -416,7 +416,7 @@
        "array([ 2, 10, 16, -4, 12])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -450,9 +450,9 @@
      "evalue": "operands could not be broadcast together with shapes (5,) (3,) ",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-fe6104907da7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mv\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-cd35bd68202d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# ValueError vectors of different dimensions can not be added together\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mv\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (3,) "
      ]
     }
@@ -488,31 +488,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (5,) (3,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-4be15775c687>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mv\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (3,) "
-     ]
-    }
-   ],
-   "source": [
-    "v - p"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "slideshow": {
@@ -533,31 +508,6 @@
    ],
    "source": [
     "v / v"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (5,) (3,) ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m-----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-1c56dd4c61c6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mv\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (5,) (3,) "
-     ]
-    }
-   ],
-   "source": [
-    "v / p"
    ]
   },
   {
@@ -583,19 +533,6 @@
    ],
    "source": [
     "v * p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "v / p"
    ]
   },
   {
@@ -636,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -954,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -969,13 +906,13 @@
        "       [14,  0, -3]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m * p # Note, this is NOT called matrix multiplication!!!"
+    "m * p # Note, this is NOT called matrix multiplication!!! Matrix multiplication is using the dot product see here: https://www.mathsisfun.com/algebra/matrix-multiplying.html"
    ]
   },
   {
