--- a/04 Numpy.ipynb
+++ b/04 Numpy.ipynb
@@ -305,21 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "red: [12 13 14] \n",
-      "blue: [16 21 26] \n",
-      "green:\n",
-      " [[11 13 15]\n",
-      " [21 23 25]\n",
-      " [31 33 35]] \n",
-      "purple: [12 17 22 27 32]\n"
-     ]
+     "text": "red: [12 13 14] \nblue: [16 21 26] \ngreen:\n [11 21 31] \npurple: [12 17 22 27 32]\n"
     }
    ],
    "source": [
@@ -350,53 +342,26 @@
    "source": [
     "### 3D\n",
     "reshape can be done with multiple dimensions. Here is an example with 3d  \n",
-    "`a = np.arange(0, 27).reshape((3, 3, 3))`  \n",
-    "![](images/cube.png)"
+    "`a = np.arange(0, 27).reshape((3, 3, 3))` \n",
+    "![](images/cube.png) \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "1st row (x-values): \n",
-      " [0 1 2] \n",
-      "---------\n",
-      "1st collumn (y-values, where x==0): \n",
-      " [0 3 6] \n",
-      "---------\n",
-      "1st depth (z-values, where y==0 and x==0): \n",
-      " [ 0  9 18] \n",
-      "---------\n",
-      "value of first side, second slice, third piece:\n",
-      " 5 \n",
-      "-------------\n",
-      "values of all x*z where y=2\n",
-      " [[ 6  7  8]\n",
-      " [15 16 17]\n",
-      " [24 25 26]] \n",
-      "----------\n",
-      "all z and y values where x = 2: \n",
-      " [[ 2  5  8]\n",
-      " [11 14 17]\n",
-      " [20 23 26]] \n",
-      "--------\n",
-      "skip each second z,y,x: \n",
-      " [[[ 0  2]\n",
-      "  [ 6  8]]\n",
-      "\n",
-      " [[18 20]\n",
-      "  [24 26]]]\n"
-     ]
+     "text": "1st row (x-values): \n [0 1 2] \n---------\n1st collumn (y-values, where x==0): \n [0 3 6] \n---------\n1st depth (z-values, where y==0 and x==0): \n [ 0  9 18] \n---------\nvalue of first side, second slice, third piece:\n 5 \n-------------\nvalues of all x*z where y=2\n [[ 6  7  8]\n [15 16 17]\n [24 25 26]] \n----------\nall z and y values where x = 2: \n [[ 2  5  8]\n [11 14 17]\n [20 23 26]] \n--------\nskip each second z,y,x: \n [[[ 0  2]\n  [ 6  8]]\n\n [[18 20]\n  [24 26]]]\n"
     }
    ],
    "source": [
     "a = np.arange(0, 27).reshape((3, 3, 3)) # = (z, y, x)\n",
     "#print('whole cube: \\n',a, '\\n---------------')\n",
+    "\n",
+    "\n",
     "\n",
     "print('1st row (x-values): \\n',a[0,0,:],'\\n---------')\n",
     "print('1st collumn (y-values, where x==0): \\n',a[0,:,0],'\\n---------')\n",
@@ -884,19 +849,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "a contains all values:  [ 0 10 20 30 40 50 60 70 80 90]\n",
-      "b contains the indices of the filtered values:  (array([0, 1, 2, 3, 4]),) <class 'tuple'>\n",
-      "c contains the filtered values: in [5 6 7 8 9] <class 'numpy.ndarray'>\n",
-      "using the indices returned by np.where to get the values:\n",
-      " [50 60 70 80 90]\n"
-     ]
+     "name": "stdout",
+     "text": "a contains all values:  [ 0 10 20 30 40 50 60 70 80 90]\nb contains the indices of the filtered values:  (array([0, 1, 2, 3, 4], dtype=int64),) <class 'tuple'>\nc contains the filtered values: in [5 6 7 8 9] <class 'numpy.ndarray'>\nusing the indices returned by np.where to get the values:\n [50 60 70 80 90]\n"
     }
    ],
    "source": [
@@ -1340,6 +1299,45 @@
     "7. create a function, that given year and nationality can return which area had the most of these nationals by that year. Test it by finding out which area had the most Moroccan people in both 1992 and 2015\n",
     "8. Find the Area(s) where fewest foreingers lived in Copenhagen in 1992 and 2015 respectively\n",
     "9. Find out what age most French people have in 2015"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[2000    1    5 5100  328]]\n41952\n"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "#1\n",
+    "filename = 'befkbhalderstatkode.csv'\n",
+    "bef_stats_df = np.genfromtxt(filename, delimiter=',', dtype=np.uint, skip_header=1)\n",
+    "\n",
+    "# 5180\n",
+    "#print(bef_stats_df)\n",
+    "mask = (bef_stats_df[:,0] == 2015) & (bef_stats_df[:,3] == 5180) & (bef_stats_df[:,2] == 0)\n",
+    "bef_stats_df[mask][:,4].sum()\n",
+    "\n",
+    "def get_population_data(year, city, age, statecode):\n",
+    "    mask1 = (bef_stats_df[:,0] == year) & (bef_stats_df[:,3] == statecode) & (bef_stats_df[:,2] == age) & (bef_stats_df[:,1] == city)\n",
+    "    return bef_stats_df[mask1]\n",
+    "\n",
+    "print(get_population_data(2000, 1, 5, 5100))\n",
+    "\n",
+    "def get_sum_of_people(year, city, statecode, age=None,):\n",
+    "    if(age is None):\n",
+    "        mask = (bef_stats_df[:,0] == year) & (bef_stats_df[:,3] == statecode) & (bef_stats_df[:,1] == city)\n",
+    "        return bef_stats_df[mask][:,4].sum()\n",
+    "    else:\n",
+    "        mask = (bef_stats_df[:,0] == year) & (bef_stats_df[:,3] == statecode) & (bef_stats_df[:,2] == age) & (bef_stats_df[:,1] == city)\n",
+    "        return bef_stats_df[mask]\n",
+    "\n",
+    "print(get_sum_of_people(2011, 1, 5100))"
    ]
   },
   {
@@ -1796,7 +1794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "varInspector": {
    "cols": {
