changes to 7 and 10

--- a/06 Exercise.ipynb
+++ b/06 Exercise.ipynb
@@ -9,7 +9,7 @@
     "Create a module containing a class with the following methods:\n",
     "1. __init__(self, url_list)\n",
     "2. download(url,filename) raises NotFoundException when url returns 404\n",
-    "3. multi_download(url_list) uses threads to download multiple urls as text and stores filenames as a property\n",
+    "3. multi_download() uses threads to download multiple urls as text and stores filenames as a property\n",
     "4. __iter__() returns an iterator\n",
     "5. __next__() returns the next filename (and stops when there are no more)\n",
     "6. urllist_generator() returns a generator to loop through the urls\n",
