--- a/07-2 Regular Expressions.ipynb
+++ b/07-2 Regular Expressions.ipynb
@@ -186,7 +186,7 @@
     "61 69 03 76\"\"\"\n",
     "\n",
     "mo = city_reg.search(address_entry)\n",
-    "print('Group 0: ',mo.group(0))\n",
+    "print('Group 0: ', mo.group(0))\n",
     "print('Group 1: ', mo.group(1))\n",
     "print('Group 2: ', mo.group(2))\n",
     "mo.groups()"
@@ -231,6 +231,14 @@
     "\n",
     "\n",
     "If there are groups in the regular expression, then **findall() will return a list of tuples**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The finditer() method\n",
+    "Will return an iterator that will provide all non overlapping match objects"
    ]
   },
   {
@@ -375,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
