--- a/07-3 selenium.ipynb
+++ b/07-3 selenium.ipynb
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"9d0687c1-0cc4-45f8-abbb-f58886b65d2c\", element=\"002ce803-e7ba-4df9-8393-0e3816db8d73\")>]\n"
+      "[<selenium.webdriver.firefox.webelement.FirefoxWebElement (session=\"085c3d1e-0e38-4e03-a9c2-491b1862e7a2\", element=\"8c8f25d7-363d-475f-8200-63d2045689b0\")>]\n"
      ]
     },
     {
@@ -89,9 +89,9 @@
        " 'Agnethe Hartmann Hansen\\n Skovsyrevej 66 \\n 4700 Næstved \\n40 63 19...\\n',\n",
        " 'Aiya Reginalda Hartmann Jensen\\n Mosestræde 26 \\n Thurø \\n21 33 29...\\n',\n",
        " 'Alberte Hartmann Bertelsen\\n Gugvej 123 \\n 9210 Aalborg SØ \\n25 80 90...\\n',\n",
-       " 'Alex Hartmann\\n Skæring Havvej 129 \\n 8250 Egå \\n40 32 02...\\n',\n",
        " 'Alex Hartmann\\n Fuglebakken 9 \\n Brylle \\n22 94 00...\\n',\n",
-       " 'Alexander Hartmann\\n Strandgaardsvej 38 \\n 7120 Vejle Øst \\n40 52 05...4\\n',\n",
+       " 'Alex Hartmann\\n Skæring Havvej 129 \\n 8250 Egå \\n40 32 02...\\n',\n",
+       " 'Alexander Hartmann\\n Strandgaardsvej 38 \\n 7120 Vejle Øst \\n26 17 61...3\\n',\n",
        " 'Alexander Sune Hartmann\\n Inger Christensens Gade 24, 3. tv \\n 8220 Brabrand \\n42 63 99...\\n',\n",
        " 'Alexandra Tatiana-Louise Hartmann\\n Enighedsvej 6E, 4. tv \\n 2920 Charlottenlund \\n42 26 06...\\n',\n",
        " 'Alf Hartmann\\n Ølandsvej 35 \\n 4681 Herfølge \\n21 28 21...\\n',\n",
@@ -104,12 +104,12 @@
        " 'Allan Hartmann Ditlevsen\\n Rydevænget 75, 3. tv \\n 8210 Aarhus V \\n60 93 93...\\n',\n",
        " 'Allan Hartmann Haandbæk\\n Lykkesminde 5 \\n 5330 Munkebo \\n51 30 15...\\n',\n",
        " 'Allan Hartmann Hansen\\n Eskærhøjvej 58 \\n 6100 Haderslev \\n29 82 32...\\n',\n",
-       " 'Allan Hartmann Larsen\\n Perlestikkervej 9, 4. tv \\n 2400 København NV \\n25 75 99...\\n',\n",
+       " 'Allan Hartmann Larsen\\n Perlestikkervej 4, tv \\n 2400 København NV \\n25 75 99...\\n',\n",
        " 'Alma Howland Hartmann\\n Højskolevej 12 \\n Snoghøj \\n27 58 07...\\n',\n",
        " 'Amalie Hartmann Levå Hansen\\n\\n40 41 61...Vis nummer\\n40 41 61...\\n']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,22 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'There were 25 Hartmanns on Krak'"
+       "'There were 25 Hartmanns on the first page'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'There were {} Hartmanns on Krak'.format(len(res))"
+    "'There were {} Hartmanns on the first page'.format(len(res)) "
    ]
   },
   {
@@ -256,11 +256,10 @@
    },
    "source": [
     "## Class exercise\n",
-    "Use selenium to automate a search on dba.dk\n",
-    "- search for 'cykel'\n",
-    "- choose 'private' from the announcements\n",
-    "- click on price to get them sorted by price.\n",
-    "- list all product names and their prices for the 5 most expencive bikes"
+    "Find a web site to interact with and fill out a form to get some information back.  \n",
+    "Examples could be https://www.jobindex.dk/,    \n",
+    "https://google.com or   \n",
+    "https://www.ikea.com/dk/da/"
    ]
   }
  ],
